@@ -1,8 +1,19 @@
 From: Simon McVittie <smcv@debian.org>
 Date: Sun, 25 Aug 2019 16:53:31 +0100
-Subject: Don't usually run tests that are not expected to succeed
+Subject: Normally skip tests that are not expected to succeed
 
-They can still be requested via an environment variable.
+If a test is not expected to succeed, then running it could be considered
+to be a waste of resources, particularly if the failure might manifest
+as an indefinite hang (see !11), or if the test is likely to dump core
+and trigger "expensive" crash-reporting mechanisms like systemd-coredump,
+corekeeper, abrt or apport.
+
+Skip the tests that are expected to fail. They can still be requested via
+an environment variable, which can be set after fixing a bug to check which
+tests are now passing.
+
+Signed-off-by: Simon McVittie <smcv@debian.org>
+Forwarded: https://gitlab.gnome.org/GNOME/cogl/merge_requests/15
 ---
  test-fixtures/test-utils.c        |  4 +++-
  test-fixtures/test-utils.h        |  2 +-
@@ -72,7 +83,7 @@ index ee66899..63ae15f 100644
    } G_STMT_END
  
 diff --git a/tests/unit/test-unit-main.c b/tests/unit/test-unit-main.c
-index b1f7864..3962a97 100644
+index b1f7864..6065b08 100644
 --- a/tests/unit/test-unit-main.c
 +++ b/tests/unit/test-unit-main.c
 @@ -36,10 +36,16 @@ main (int argc, char **argv)
@@ -87,7 +98,7 @@ index b1f7864..3962a97 100644
 -  return 0;
 +  if (test_utils_init (unit_test->requirement_flags,
 +                       unit_test->known_failure_flags)
-+      || getenv ("CLUTTER_TEST_TRY_EVERYTHING") != NULL)
++      || g_getenv ("COGL_TEST_TRY_EVERYTHING") != NULL)
 +    {
 +      unit_test->run ();
 +      test_utils_fini ();
