@@ -20,6 +20,10 @@ cogl (1.22.4-4) UNRELEASED; urgency=medium
     license grant
   * d/copyright: Add details of cut-down GLib in deps/.
     This is not actually used in the Debian package.
+  * d/p/Normally-skip-tests-that-are-not-expected-to-succeed.patch:
+    Rename from
+    d/p/Don-t-usually-run-tests-that-are-not-expected-to-succeed.patch
+    and amend to match what I sent upstream
 
  -- Simon McVittie <smcv@debian.org>  Sun, 23 Feb 2020 14:25:10 +0000
 
